src/pages/es/v1.17.0/configuration/proxy-settings.mdx
---
title: "Configuración del proxy"
metaTitle: "Configuración del proxy"
metaDescription: "Configuración para ejecutar OpenReplay detrás de un proxy como NGINX o Apache2."
---

## Alojar OpenReplay con otras aplicaciones usando un proxy inverso

Cuando OpenReplay se ejecuta en una máquina, usará el puerto 80/443 para exponer la aplicación. Pero cuando usas un proxy inverso, OpenReplay puede configurarse para usar otro puerto para acceder a la aplicación. A continuación se indican los pasos para hacerlo:

1. Edita el archivo de configuración:

```bash
openreplay -e
```

2. Cambia la sección de configuración de nginx:

```yaml
ingress-nginx: &ingress-nginx
  controller:
	...
	...
    service:
      externalTrafficPolicy: "Local"
      ports:
        http: 880   # Change this port for http
        https: 8443 # Change this port for https
```
3. Guarda y sal de la configuración usando `:wq` para que OpenReplay pueda recargar la configuración.

Después puedes configurar tu proxy inverso. Consulta las siguientes secciones para hacerlo.

### Configuración de NGINX

Asegúrate de que tu proxy esté enviando los encabezados `X-Forwarded-For` y `X-Forwarded-Proto`. También debe estar habilitado SSL para que OpenReplay funcione. El resto de la configuración debería verse así:

```nginx
location / {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header Host $http_host;
        proxy_redirect off;
        proxy_pass http://1.2.3.4:880; # replace with OpenReplay instance IP
    }
```

### Configuración de Apache2

Asegúrate de que los módulos `proxy`, `proxy_http` y `proxy_html` estén habilitados. SSL también debe estar configurado, el resto de la configuración debería ser similar a esto:

```
<VirtualHost *:443>
    ProxyPass / http://1.2.3.4:880 <!-- replace with instance IP -->
    RequestHeader set X-Forwarded-Proto expr=%{REQUEST_SCHEME}
    # SSL + other config here
</VirtualHost>
```

## Endpoints públicos

En caso de que estés protegiendo tu instancia de OpenReplay con un proxy, asegúrate de que los siguientes endpoints sean accesibles públicamente para que OpenReplay funcione correctamente.

| Endpoint | Descripción |
|----------|-------------|
| /ingest | Para capturar eventos y grabaciones |
| /api | Para extraer y administrar datos de usuario |
| /assist | Para video/llamadas en vivo con los usuarios finales (WebRTC) |
| /ws-assist | Para reproducciones de sesiones en vivo con los usuarios finales |
| /static/openreplay.js | Código JavaScript que carga OpenReplay |

## ¿Tienes preguntas?

Si tienes alguna pregunta sobre este proceso, no dudes en contactarnos en nuestro [Slack](https://slack.openreplay.com) o consultar nuestro [Foro](https://forum.openreplay.com).
